--- a/projet.css
+++ b/projet.css
@@ -126,9 +126,7 @@ transition: 5s;
 
 #map { 
     height: 400px; 
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
     display: block;
 }
 
@@ -154,4 +152,10 @@ footer {
     width:100%;
     background-color: black;
     text-align: center;
+}
+
+.pageBody {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
